--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -116,7 +116,7 @@
             android:layout_height="50dp"
             android:layout_alignParentBottom="true"
             android:gravity="center"
-            android:background="#77000000"
+            android:background="#55000000"
             android:orientation="horizontal">
 
             <TextView
@@ -128,23 +128,23 @@
                 android:shadowDy="0"
                 android:shadowColor="#ffcccccc"
                 android:layout_width="0dp"
-                android:layout_weight="15"
+                android:layout_weight="20"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:layout_marginRight="15dp"
+                android:layout_marginLeft="5dp"
                 android:text="00:00"
                 android:textAlignment="center"
                 android:textColor="@android:color/holo_blue_bright" />
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_weight="70"
+                android:layout_weight="60"
                 android:orientation="vertical"
                 android:layout_height="match_parent">
 
                 <TextView
                     android:layout_width="match_parent"
-                android:gravity="center"
+                    android:gravity="center"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     android:layout_height="wrap_content"
@@ -158,7 +158,7 @@
 
                 <TextView
                     android:gravity="center"
-                    android:textSize="20sp"
+                    android:textSize="17sp"
                     android:textStyle="bold"
                     android:shadowRadius="25"
                     android:shadowDx="0"
@@ -179,11 +179,11 @@
                 android:shadowColor="#ffcccccc"
                 android:layout_width="0dp"
                 android:textSize="17sp"
-                android:layout_weight="15"
+                android:layout_weight="20"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"
+                android:gravity="center_vertical|right"
                 android:textStyle="bold"
-                android:layout_marginLeft="15dp"
+                android:layout_marginRight="5dp"
                 android:text="99:99"
                 android:textAlignment="center"
                 android:textColor="@android:color/holo_blue_bright" />
